# Samsung USB bulk-transfer utility
# Copyright (C) 2011, Michel Stempin <michel.stempin@wanadoo.fr>
# All rights reserved.
#
# Makefile configuration - processed by automake.
#
# $Id: Makefile.am 214 2011-03-09 23:36:14Z michel.stempin@wanadoo.fr $
#

# General automake options.
AUTOMAKE_OPTIONS = foreign no-dependencies
ACLOCAL_AMFLAGS = -I m4

# The list of subdirectories containing Makefiles.
SUBDIRS = m4 po src doc

# Additional files to be distributed.
EXTRA_DIST = autoclean COPYRIGHT
